--- a/styele.css
+++ b/styele.css
@@ -1,34 +1,78 @@
-/* style.css */
-body {
-    margin: 0;
-    padding: 0;
-    background-image: url('2C72DACC-C518-4BF2-89CA-C677E2F086CA.jpeg');
-    background-size: cover;
+html {
+    background-image: url("img.jpg"); /* العودة إلى الصورة الأصلية jpg */
     background-position: center;
-    font-family: 'Arial', sans-serif;
-    direction: rtl;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #24272b;
     color: white;
     text-align: center;
+    overflow: hidden;
+    direction: rtl; /* إضافة اتجاه النص من اليمين لليسار */
 }
 
-#overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    min-height: 100vh;
-    padding-top: 50px;
+h1 {
+    text-shadow: 0.1em 0.1em 0.2em black;
+    font-size: 25px;
+    color: white;
+    font-family: Arial, sans-serif; /* تحسين الخط */
 }
 
-.title {
-    font-size: 36px;
-    color: yellow;
+a {
+    text-decoration: none;
 }
 
-.name {
-    font-size: 28px;
-    color: red;
+#progress {
+    display: block;
 }
 
-.footer {
-    font-size: 24px;
-    color: orange;
-    margin-top: 20px;
+#lnx {
+    display: none;
+}
+
+#mods {
+    display: none;
+}
+
+.btn {
+    background-color: #008000;
+    color: white;
+    width: 227px;
+    height: 46px;
+    padding-bottom: 5px;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-style: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 4px;
+    font-family: Arial, sans-serif; /* تحسين الخط */
+}
+
+.btn:hover {
+    background-color: #0069d9;
+}
+
+.btn-onln {
+    background-color: #076300;
+}
+
+.btn-onln:hover {
+    background-color: #18891b;
+}
+
+.btn-toolbox {
+    background-color: #ae2301;
+}
+
+.btn-toolbox:hover {
+    background-color: #d42a01;
+}
+
+#console {
+    font-family: "logging";
 }
