--- a/css/index.css
+++ b/css/index.css
@@ -5,12 +5,14 @@ html, body {
     overflow: hidden;
     background: #222222;
 }
+
 body {
     min-height: 100vh;
     min-width: 100vw;
     position: relative;
     font-family: 'Segoe UI', Arial, sans-serif;
 }
+
 .header {
     z-index: 2;
     position: fixed;
@@ -21,6 +23,7 @@ body {
     justify-content: left;
     pointer-events: none;
 }
+
 .header-title {
     color: #FFF;
     font-size: 20px;
@@ -31,9 +34,10 @@ body {
     border-radius: 18px;
     padding: 10px 48px;
     pointer-events: auto;
-    border: 3px solid #FFB84D; /* Optional: add border for visibility */
+    border: 3px solid #FFB84D; 
 
 }
+
 .center-btn-wrap {
     position: absolute;
     left: 50%;
@@ -45,6 +49,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .ps-btn {
     display: flex;
     align-items: center;
@@ -61,17 +66,20 @@ body {
     position: relative;
     transition: 0.5s;
 }
+
 .ps-btn:hover {
     box-shadow: 0 0px 48px #FFB84D,0 0px 10px #000c;
     transform: scale(1.07);
     transition: 0.5s;
     background: rgb(64, 64, 64);
 }
+
 .ps-btn svg:hover {
     transform: scale(1.07);
     transition: 0.5s;
     fill: #FFB84D;
 }
+
 .ps-btn svg {
     width: 67px;
     height: 67px;
@@ -79,15 +87,16 @@ body {
     fill: #008cff;
     transition: 0.5s;
 }
+
 #console {
     color: #FFF;
     background-color: #6f707433;
     border-radius: 18px;
     width: 90%;
     height: 18%;
-    margin: 0 auto; /* Center horizontally */
-    border: 1px solid #FFB84D; /* Optional: add border for visibility */
-    padding: 10px; /* Optional: add padding */
+    margin: 0 auto; 
+    border: 1px solid #FFB84D;
+    padding: 10px; 
     display: flex;
     align-items: center;
     position: absolute;
@@ -97,7 +106,7 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
 }
-/* Floating Menu */
+
 .floating-menu {
     position: fixed;
     top: 2%;
@@ -119,13 +128,13 @@ body {
     transition: all 0.3s;
     margin-left: 10px;
 }
+
 .menu-btn:hover {
     background-color: #FFB84Dc4;
     color: #222222;
 }
-/* Popup styles */
+
 .popup {
-    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -135,13 +144,22 @@ body {
     padding: 20px;
     z-index: 1001;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    width: 500px;
+    width: 50%;
+    height: 50%;
     border-radius: 15px;
+    display: none;
+    justify-content: center; 
+    align-items: center;     
+    gap: 20px;               
+    box-sizing: border-box;
 }
 
 .popup h2 {
     padding: 5px;
     text-align: center;
+    position: fixed;
+    top: 1px;
+
 }
 
 .overlay {
@@ -167,9 +185,9 @@ body {
 
 .close-btn {
     position: fixed;
-    top: 10px;     /* distance du haut */
-    right: 10px;   /* distance du côté droit */
-    margin-top: 0; /* pas besoin si position fixed */
+    top: 10px;
+    right: 10px;
+    margin-top: 0;
     padding: 8px 15px;
     background-color: #333;
     color: white;
@@ -179,7 +197,7 @@ body {
     font-family: Arial, sans-serif;
     font-size: 14px;
     transition: background-color 0.3s, transform 0.2s;
-    z-index: 9999; /* pour qu'il soit au-dessus d'autres éléments */
+    z-index: 9999;
 }
 
 .close-btn:hover {
@@ -191,33 +209,7 @@ body {
     transform: scale(0.98);
 }
 
-/* Popup styles */
-.popup {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed position */
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Adjust for centering */
-    background-color: white; /* Popup background */
-    border: 1px solid #ccc; /* Optional: border */
-    padding: 20px; /* Padding inside the popup */
-    z-index: 1500; /* Ensure it is above other content */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
-    align-items: center;
-    justify-content: center;
-}
-/* Overlay styles */
-.overlay {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed position */
-    top: 0; /* Cover the entire viewport */
-    left: 0; /* Cover the entire viewport */
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    z-index: 999; /* Ensure it is below the popup */
-}
-h3 {
+#DebugConsole h3 {
     color: #FFF;
     font-size: 1em;
     font-weight: bold;
@@ -234,24 +226,26 @@ h3 {
     left: 5%;
 
 }
+
 #button-container {
     color: #FFF;
     background-color: #6f707433;
     border-radius: 18px;
     width: 80%;
     height: 20%;
-    margin: 0 auto; /* Center horizontally */
-    border: 1px solid #FFB84D; /* Optional: add border for visibility */
-    padding: 10px; /* Optional: add padding */
+    margin: 0 auto;
+    border: 1px solid #FFB84D; 
+    padding: 10px; 
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
-    overflow-y: auto; /* scroll if buttons overflow vertically */
+    overflow-y: auto;
     position: absolute;
     top: 40%;
     left: 5px;
     right: 5px;
 }
+
 #button-container button {
     padding: 10px 0;
     font-size: 15px;
@@ -263,27 +257,30 @@ h3 {
     transition: background-color 0.25s ease;
     width: 200px;
     height: 50px;
-    margin: 0 auto; /* center horizontally */
+    margin: 0 auto;
     box-sizing: border-box;
 }
+
 #button-container button:hover {
     background-color: #FFB84D;
     color: #222222;
 }
+
 .floating-menu-payloads {
     position: fixed;
     top: 20%;
-    left: 50%; /* start at horizontal center */
-    transform: translateX(-50%); /* shift back by half width to center */
-    width: 50vw; /* 50% of viewport width */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50vw;
     background-color: #6f707433;
     display: flex;
-    justify-content: space-around; /* spread buttons evenly */
+    justify-content: space-around;
     padding: 10px 0;
-    border-radius: 15px; /* optional rounded bottom corners */
+    border-radius: 15px;
     box-shadow: 0 2px 5px rgb(34, 34, 34);
     z-index: 1000;
 }
+
 .floating-menu-payloads button {
     background: transparent;
     border: none;
@@ -297,6 +294,7 @@ h3 {
 .floating-menu-payloads button:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+
 #tools {
     color: white;
     display: flex;
@@ -308,6 +306,7 @@ h3 {
     right: 5px;
 
 }
+
 #PS4FW {
     color: white;
     display: flex;
@@ -319,33 +318,6 @@ h3 {
     right: 5px;
 }
 
-/* Style pour le label contenant la checkbox */
-#autojbchkb {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  color: #333;
-  user-select: none;
-}
-
-#autojbchkb {
-  display: flex;
-  align-items: center;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  color: #2196F3;
-}
-
-#ckbaj {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-/* Label styling */
 #jailbreak-page label {
     font-family: Arial, sans-serif;
     font-size: 18px;
@@ -360,12 +332,6 @@ h3 {
     padding: 1%;
 }
 
-@media (max-width: 600px) {
-    .header-title { font-size: 1.3em; padding: 5px 14px;}
-    .ps-btn { width: 90px; height: 90px;}
-    .ps-btn svg { width: 44px; height: 44px;}
-}
-
 #settings-popup label {
     margin: 0 15px;
     font-family: Arial, sans-serif;
@@ -373,8 +339,142 @@ h3 {
     cursor: pointer;
 }
 
-/* Styliser l'input radio si besoin */
 #settings-popup input[type="radio"] {
-    margin-right: 8px;
-    accent-color: white; /* pour Chrome/Safari */
+    accent-color: white;
+}
+
+#PS4FWOK {
+  width: 250px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  text-align: center;
+  margin: 1%;
+  padding: 20px;
+}
+
+#listfw {
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+    background-color: #555;
+    color: white;
+    width: 90%;
+    border-radius: 15px;
+}
+
+#choosejb {
+  width: 250px; 
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  padding: 20px;
+  text-align: center;
+  margin: 1%;
+}
+
+#choosejb h3 {
+  margin-bottom: 10px;
+  font-family: 'Arial', sans-serif;
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+.radio-group {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+#choosejb label {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-family: 'Arial', sans-serif;
+  font-size: 0.9em;
+}
+
+#autojbchkb {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+
+#autojbchkb input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+#debugconsolechkb {
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+
+#debugconsolechkb input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+#install-psfrl {
+    width: 25%;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 10px;
+    right: 5px;
+    background: transparent;
+    border: 2px solid #2196F3;
+    color: #008cff;
+    font-size: 15px;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 5px;
+    transition: 0.25s ease;
+}
+
+#install-psfrl:hover {
+    border: 2px solid #FFB84D;
+    border-radius: 15px;
+    color: #FFB84D;
+    background-color: #333;
+}
+
+.loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.loader-circle {
+    width: 50px;
+    height: 50px;
+    border: 8px solid #ccc;
+    border-top-color: #333;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+@media (max-width: 600px) {
+    .header-title { font-size: 1.3em; padding: 5px 14px;}
+    .ps-btn { width: 90px; height: 90px;}
+    .ps-btn svg { width: 44px; height: 44px;}
 }
